--- a/conclusion.html
+++ b/conclusion.html
@@ -11,6 +11,8 @@
 	    <!-- Custom CSS -->
 	    <link href="css/clean-blog.min.css" rel="stylesheet">
 
+	    <link href="css/style.css" rel="stylesheet">
+
 	    <!-- Custom Fonts -->
 	    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	    <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -72,7 +74,17 @@
 	    </nav>
 
 
-	    <br><br><br><br><br><br><br>
+	    <br><br>
+	    <h2 align="center">Conclusão</h2>
+ 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	    <p>
+	    	No século XXI é completamente indispensável o acesso à Internet. Porém, o modelo de redes atual inviabiliza o desenvolvimento e a implementação dinâmica de novas aplicações de rede e/ou novos protocolos. Além disso, o gerenciamento da rede atual é extremamente complexo, uma vez que, por exemplo, em casos de falha, a rede não aponta onde a falha ocorreu. Os problemas anteriormente citados são solucionados pelas redes definidas por software (SDN).Entretanto, este modelo de rede não pode substituir a Internet por completo, uma vez que ele possui diversas limitações, como problemas de escalabilidade, o que dificulta sua adoção por todos os usuários da rede. 
+	    </p>
+	    <p>
+	    	Além disso, nas SDNs o controle é centralizado, o que pode ser visto como uma vantagem e uma desvantagem. Por um lado, a centralização facilita a programação de aplicações que interfiram no comportamento da rede. Por outro lado, a centralização se torna um ponto único de falha. Algumas iniciativas tentam realizar a distribuição do plano de controle e contornar essas limitações. 
+	    </p>
+	    </div>  
+
 	    <!-- Footer -->
 	    <footer>
 	        <div class="container">
