--- a/motivation.html
+++ b/motivation.html
@@ -86,11 +86,15 @@
 			<p>
 			O objetivo que precede a criação das redes definidas por software (SDN) era criar uma rede de computadores programáveis, permitindo a inovação no gerenciamento das redes e diminuindo a barreira, então existente, para criar novos serviços para a rede. Antes das SDNs surgirem, diversas outras tentativas de redes programáveis surgiram, como podemos ver na Figura 1. Veremos, a seguir, mais detalhes de alguns desses projetos e o porquê de alguns deles não terem vingado no mercado, mas terem tido uma contribuição essencial ao projeto de desenvolvimento de redes programáveis.
 			</p>
-			
+
+		</div>
+
 			<center>
 			<img src="images/motivation.png" alt="Redes Programáveis" height="500" width="1000">
 			<h5>Figura 1: A evolução das redes programáveis. Imagem retirada do artigo [<a href="references.html#id22">22</a>]</h5>
 			</center>
+
+		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 			
 			<br><br>
 			
@@ -120,7 +124,7 @@
 			</p>
 			
 			<p>
-				Outro grande problema das redes atuais, que é resolvido pelas redes definidas por software, é: as <strong>atuais redes</strong> são integradas verticalmente, isto é, <strong>os planos de controle e de dados são agrupados</strong> enquanto a grande promessa das redes definidas por software (<strong>SDN</strong>) é <strong>quebrar essa integração vertical</strong>, separando a lógica de controle da rede dos roteadores e comutadores subjacentes, promovendo a centralização da lógica de controle da rede. Além disso, estas redes introduzem uma habilidade essencial para contornar alguns dos problemas descritos acima das redes atuais: elas são programáveis. Dessa forma, novas tecnologias podem ser implementadas na rede de forma gradual, o que hoje é inviável. Não só isso, mas pelo fato das SDNs serem programáveis, estas redes podem ter funcionalidades para tentar garantir, junto às VNFs (Virtualized Network Functions), Qualidade de Serviço, o que a rede atual não é capaz. Isso se dá devido ao fato que ela foi construída sob dois paradigmas: FIFO (First in First out) e a lei do menor esforço, o que impede a diferenciação de serviços, tendo todos os usuários da Internet, pois não existe nenhuma forma de priorizar pacotes a serem enviados, uma vez que todos ficam na mesma fila em que o primeiro pacote a chegar é enviado primeiro. Ademais, as SDNs também podem gerenciar sua segurança, como será visto mais a frente.
+				Outro grande problema das redes atuais, que é resolvido pelas redes definidas por software, é: as <strong>atuais redes</strong> são integradas verticalmente, isto é, <strong>os planos de controle e de dados são agrupados</strong> enquanto a grande promessa das redes definidas por software (<strong>SDN</strong>) é <strong>quebrar essa integração vertical</strong>, separando a lógica de controle da rede dos roteadores e comutadores subjacentes, promovendo a centralização da lógica de controle da rede. Além disso, estas redes introduzem uma habilidade essencial para contornar alguns dos problemas descritos acima das redes atuais: elas são programáveis. Dessa forma, novas tecnologias podem ser implementadas na rede de forma gradual, o que hoje é inviável. Não só isso, mas pelo fato das SDNs serem programáveis, estas redes podem ter funcionalidades para tentar garantir, junto às VNFs (<i>Virtualized Network Functions</i>), Qualidade de Serviço, o que a rede atual não é capaz. Isso se dá devido ao fato que ela foi construída sob dois paradigmas: FIFO (<i>First in First out</i>) e a lei do menor esforço, o que impede a diferenciação de serviços, tendo todos os usuários da Internet, pois não existe nenhuma forma de priorizar pacotes a serem enviados, uma vez que todos ficam na mesma fila em que o primeiro pacote a chegar é enviado primeiro. Ademais, as SDNs também podem gerenciar sua segurança, como será visto mais a frente.
 			</p>
 			
 	    </div>
